# gpsr

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  checkpoint.pt  cuda.py  diagnostics.py  environment.yml  filimented_gaussian_example.ipynb  gaussian_example.ipynb  histogram.py  losses.py  modeling.py  noisy.py  normalizing_flow.py  offset.py  pyproject.toml  quad_scan_emittance_fit.py  test_beam.ipynb  test_beams.py  test_distgen.ipynb  torch_track.py  track.py  tracking_speed_test.py  trained_state_0_5mm_kernel.pt  trained_state_2mm_kernel.pt  transverse_filimentation.py  utils.py  visualization.py
.github/workflows/: lint.yml  pypi_upload.yml  test_build.yml  tests.yml
.ipynb_checkpoints/: gaussian_example-checkpoint.ipynb
5D_reconstruction/: ground_truth.py
AWA/: VotingRegressor_MaxEntropyQuadScan_1_ckpt.pth  analysis.ipynb  analysis_convergence.ipynb  analysis_images.ipynb  analysis_paper.ipynb  analysis_paper_v2.ipynb  analysis_quad_scan.ipynb  analysis_reconstruction.ipynb  analysis_supplemental.ipynb  checkpoint.pt  fit_emittance.ipynb  fitting.py  fitting_test.py  image_processing.ipynb  image_processing.py  kappa.pt  modeling.py  process.py  quad_scan_180.py  quad_scan_180_ensemble.py  quad_scan_180_initial_ensemble.py  torch_track.py  train_charges.pt  untitled.py  utils.py  visualization.py  xx.pt
AWA/alpha_1e-3_off_energy/: loss_log.pt
AWA/low_data/: loss_log.pt
beams/: gaussian.yaml
dev/: 6d.nb  test_gpu.ipynb
dev/5D_reconstruction/: benchmarking.py  (+1 more)
docs/: test.ipynb
examples/: example_reconstruction_4d.ipynb  example_reconstruction_6d.ipynb  reconstruction_4d.ipynb  reconstruction_6d.ipynb
facet_ii/: multi_sample_reconstruction.ipynb  multi_sample_reconstruction_ensemble_w_prediction_copy.ipynb  single_sample_reconstruction.ipynb  single_sample_reconstruction_with_prediction.ipynb
gpsr/: analysis.py  beams.py  data_processing.py  datasets.py  diagnostics.py  ensemble.py  losses.py  modeling.py  run.py  train.py  visualization.py
lagrange/: analysis_convergence.ipynb  analysis_reconstruction.ipynb  fitting.py  image_fitting_ensemble_example.py  image_fitting_example.py
modeling_experiments/: experimental.py  fitting.py  model_analysis.ipynb  preconditioning.ipynb
paper/: losses.py  modeling.py  quad_scan_emittance_fit.py  torch_track.py  track.py  utils.py
phase_space_reconstruction/: analysis.py  beamlines.py  beams.py  datasets.py  diagnostics.py  histogram.py  losses.py  modeling.py  plot.py  train.py  utils.py  variational.py  visualization.py
scripts/: run_examples.py  run_tests.py
synthetic_example/: analysis_convergence.ipynb  analysis_reconstruction.ipynb  analysis_supplemental.ipynb
test_beams/: gaussian.yaml  generate_sinusoidal.py  noisy_gaussian.py
test_case/: VotingRegressor_QuadScanModel_1_ckpt.pth  VotingRegressor_QuadScanModel_2_ckpt.pth  fitting.py  generate_test_beam.py  model_analysis.ipynb  test.py
test_case3/: gaussian.yaml  generate_test_beam.py
test_case_4/: Untitled.ipynb  generate_test_beam.py
tests/: test_6d_lattice.py  test_diagnostics.py  test_histogram.py
(+485 files in other folders)
